# caikit-computer-vision

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  runtime_config.yaml  tox.ini
.github/workflows/: build-library.yml  lint-code.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user_story.md
caikit_computer_vision/: __init__.py
caikit_computer_vision/config/: config.yml
caikit_computer_vision/data_model/: __init__.py  flat_image.py  image.py  image_classification.py  image_segmentation.py  object_detection.py  tasks.py  text_to_image.py
caikit_computer_vision/data_model/backends/: __init__.py  pil_backend.py
caikit_computer_vision/modules/: __init__.py
caikit_computer_vision/modules/object_detection/: __init__.py  transformers.py
caikit_computer_vision/modules/segmentation/: __init__.py  image_processing.py  models.py
caikit_computer_vision/modules/text_to_image/: __init__.py  sdxl.py  tti_stub.py
caikit_template/: __init__.py
caikit_template/config/: config.yml
caikit_template/data_model/: __init__.py  hello_world.py  image_classification.py  object_detection.py
caikit_template/modules/: __init__.py  hello_world.py
demo/client/: infer_model.py  train_model.py
demo/models/hello_world/: config.yml
demo/server/: config.yml  start_runtime.py
demo/train_data/: sample_data.csv
examples/runtime/: README.md  common.py  create_models_dir.py  create_train_data.py  dump_protos.py  launch_vision_runtime.py  run_train_and_inference.py
examples/text_to_image/: README.md  create_tti_models.py  export_protos.py  sample_client.py
tests/: __init__.py
tests/data_model/: test_flat_image.py  test_image.py  test_tasks.py
tests/fixtures/: __init__.py
tests/fixtures/tiny_models/SDXL/: README.md  config.yml
tests/fixtures/tiny_models/SDXL/sdxl_model/: model_index.json
tests/fixtures/tiny_models/SDXL/sdxl_model/unet/: config.json
tests/fixtures/tiny_models/YolosForObjectDetection/: config.json  preprocessor_config.json
tests/modules/object_detection/: test_transformer.py
tests/modules/segmentation/: test_segmentation_model.py
tests/modules/text_to_image/: test_sdxl.py  test_tti_stub.py
(+7 files in other folders)
