[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "caikit-computer-vision"
# Not the actual current version: overwritten by CI
version = "0.0.1"
description = "Caikit Computer Vision"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.9"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "caikit==0.11.0"
]

[project.urls]
Source = "https://github.com/caikit/caikit-computer-vision"
