[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "caikit-computer-vision"
# Not the actual current version: overwritten by CI
version = "0.0.1"
description = "Caikit Computer Vision"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.8"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "caikit[runtime-grpc,runtime-http,interfaces-vision]>=0.16.0,<0.27.0",
    "transformers>=4.27.1,<5",
    "torch>2.0,<3",
    "timm>=0.9.5,<1",
    "opencv-python",
    "pycocotools",
    "detectron2 @git+https://github.com/facebookresearch/detectron2.git",
    "shapely"
]

[project.urls]
Source = "https://github.com/caikit/caikit-computer-vision"
